--- a/6/lib/sparky-aptus-appcenter/net-email.html
+++ b/6/lib/sparky-aptus-appcenter/net-email.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: March 6, 2022 by pavroo
 -->
 	<head>
 		<title>Network -> e-Mail | APTus AppCenter</title>
@@ -82,6 +82,8 @@ Last update: June 13, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_mailspring" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Mailspring</a>
+		</td>
 		<td><a href="aptus://netema_mailutils" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mailutils</a>
 		</td>
 		<td><a href="aptus://netema_mmh" class="button1"><img src="images/terminal.svg" class="appicon"><br />mmh</a>
@@ -92,10 +94,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netema_nmh" class="button1"><img src="images/terminal.svg" class="appicon"><br />nmh</a>
 		</td>
-		<td><a href="aptus://netema_notmuch" class="button1"><img src="images/terminal.svg" class="appicon"><br />Notmuch</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_notmuch" class="button1"><img src="images/terminal.svg" class="appicon"><br />Notmuch</a>
+		</td>
 		<td><a href="aptus://netema_procmail" class="button1"><img src="images/terminal.svg" class="appicon"><br />Procmail</a>
 		</td>
 		<td><a href="aptus://netema_protonmail-bridge" class="button1"><img src="images/terminal.svg" class="appicon"><br />ProtonMail Bridge</a>
@@ -106,6 +108,8 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netema_thunderbird" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Thunderbird</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netema_tutanota-desktop" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Tutanota Desktop</a>
 		</td>
 	</tr>
