--- a/7/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 5, 2021 by pavroo
+Last update: March 6, 2022 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -114,16 +114,21 @@ Last update: December 5, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_sparky-dashboard" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />Sparky Dashboard</a>
 		</td>
+		<td><a href="aptus://accoth_
+		sparky-launcher" class="button1"><img src="images1/panel.svg" class="appicon"><br />Sparky Launcher</a>
+		</td>
 		<td><a href="aptus://accoth_sparky-picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Sparky Picom</a>
 		</td>
 		<td><a href="aptus://accoth_synapse" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Synapse</a>
 		</td>
 		<td><a href="aptus://accoth_tint2" class="button1"><img src="images1/panel.svg" class="appicon"><br />Tint2</a>
 		</td>
-		<td><a href="aptus://accoth_ulauncher" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Ulauncher</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_ulauncher" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Ulauncher</a>
+		</td>
+		<td><a href="aptus://accoth_vala-panel" class="button1"><img src="images1/panel.svg" class="appicon"><br />Vala Panel</a>
+		</td>
 		<td><a href="aptus://accoth_wbar" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar</a>
 		</td>
 		<td><a href="aptus://accoth_webapp-manager" class="button1"><img src="images/web-browser.svg" class="appicon"><br />WebApp Manager</a>
