--- a/7/lib/sparky-aptus-appcenter/games-simulation.html
+++ b/7/lib/sparky-aptus-appcenter/games-simulation.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: march 6, 2022 by pavroo
 -->
 	<head>
 		<title>Games -> Simulation | APTus AppCenter</title>
@@ -49,7 +49,7 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamsim_endless-sky" class="button1"><img src="images1/rocket.svg" class="appicon"><br />Endless Sky</a>
 		</td>
-		<td><a href="aptus://gamsim_flightgear-phi" class="button1"><img src="images1/cloud.svg" class="appicon"><br />FlightGear Simulator</a>
+		<td><a href="aptus://gamsim_flightgear" class="button1"><img src="images1/cloud.svg" class="appicon"><br />FlightGear Simulator</a>
 		</td>
 		<td><a href="aptus://gamsim_foobillardplus" class="button1"><img src="images1/billard.svg" class="appicon"><br />FooBillard++</a>
 		</td>
@@ -61,16 +61,14 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamsim_golly" class="button1"><img src="images/figma.svg" class="appicon"><br />Golly</a>
 		</td>
-		<td><a href="aptus://gamsim_gtkpool" class="button1"><img src="images1/billard.svg" class="appicon"><br />GtkPool</a>
-		</td>
 		<td><a href="aptus://gamsim_lincity-ng" class="button1"><img src="images/figma.svg" class="appicon"><br />LinCity-NG</a>
 		</td>
 		<td><a href="aptus://gamsim_micropolis" class="button1"><img src="images/figma.svg" class="appicon"><br />Micropolis</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamsim_opencity" class="button1"><img src="images/figma.svg" class="appicon"><br />OpenCity</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamsim_openssn" class="button1"><img src="images/figma.svg" class="appicon"><br />OpenSSN</a>
 		</td>
 		<td><a href="aptus://gamsim_openttd" class="button1"><img src="images/figma.svg" class="appicon"><br />OpenTTD</a>
@@ -81,10 +79,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamsim_searchandrescue" class="button1"><img src="images1/cloud.svg" class="appicon"><br />Search And Rescue</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamsim_simutrans" class="button1"><img src="images/figma.svg" class="appicon"><br />Simutrans</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamsim_stormbaancoureur" class="button1"><img src="images1/setrouble.svg" class="appicon"><br />Storm baancoureur</a>
 		</td>
 		<td><a href="aptus://gamsim_torcs" class="button1"><img src="images1/setrouble.svg" class="appicon"><br />TORCS</a>
