--- a/7/lib/sparky-aptus-appcenter/net-email.html
+++ b/7/lib/sparky-aptus-appcenter/net-email.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 2, 2021 by pavroo
+Last update: March 6, 2022 by pavroo
 -->
 	<head>
 		<title>Network -> e-Mail | APTus AppCenter</title>
@@ -78,10 +78,12 @@ Last update: November 2, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netema_kmail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />KMail</a>
 		</td>
-		<td><a href="aptus://netema_mailutils" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mailutils</a>
+		<td><a href="aptus://netema_mailspring" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Mailspring</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_mailutils" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mailutils</a>
+		</td>
 		<td><a href="aptus://netema_mmh" class="button1"><img src="images/terminal.svg" class="appicon"><br />mmh</a>
 		</td>
 		<td><a href="aptus://netema_mutt" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mutt</a>
@@ -92,10 +94,10 @@ Last update: November 2, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netema_notmuch" class="button1"><img src="images/terminal.svg" class="appicon"><br />Notmuch</a>
 		</td>
-		<td><a href="aptus://netema_procmail" class="button1"><img src="images/terminal.svg" class="appicon"><br />Procmail</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_procmail" class="button1"><img src="images/terminal.svg" class="appicon"><br />Procmail</a>
+		</td>
 		<td><a href="aptus://netema_protonmail-bridge" class="button1"><img src="images/terminal.svg" class="appicon"><br />ProtonMail Bridge</a>
 		</td>
 		<td><a href="aptus://netema_ roundcube" class="button1"><img src="images/web-browser.svg" class="appicon"><br />RoundCube Webmail</a>
