--- a/7/lib/sparky-aptus-appcenter/media-others.html
+++ b/7/lib/sparky-aptus-appcenter/media-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: February 4, 2022 by pavroo
+Last update: March 6, 2022 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Others | APTus AppCenter</title>
@@ -116,14 +116,16 @@ Last update: February 4, 2022 by pavroo
 		</td>
 		<td><a href="aptus://medoth_pulseaudio-equalizer" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />PulseAudio Equalizer</a>
 		</td>
+		<td><a href="aptus://medoth_pulseeffects" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />PulseEffects</a>
+		</td>
 		<td><a href="aptus://medoth_pulsemixer" class="button1"><img src="images/terminal.svg" class="appicon"><br />PulseMixer (CLI)</a>
 		</td>
 		<td><a href="aptus://medoth_qasconfig" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Qasconfig</a>
 		</td>
-		<td><a href="aptus://medoth_qrq" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />QRQ</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://medoth_qrq" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />QRQ</a>
+		</td>
 		<td><a href="aptus://medoth_qspeakers" class="button1"><img src="images/radio.svg" class="appicon"><br />QSpeakers</a>
 		</td>
 		<td><a href="aptus://medoth_rakarrack" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Rakarrack</a>
@@ -134,10 +136,10 @@ Last update: February 4, 2022 by pavroo
 		</td>
 		<td><a href="aptus://medoth_swami" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Swami</a>
 		</td>
-		<td><a href="aptus://medoth_timemachine" class="button1"><img src="images/audio-recorder.svg" class="appicon"><br />Time Machine</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://medoth_timemachine" class="button1"><img src="images/audio-recorder.svg" class="appicon"><br />Time Machine</a>
+		</td>
 		<td><a href="aptus://medoth_vokoscreen-ng" class="button1"><img src="images/gnome-camera.svg" class="appicon"><br />VokoscreenNG</a>
 		</td>
 		<td><a href="aptus://medoth_wsjtx" class="button1"><img src="images/radio.svg" class="appicon"><br />WSJT-X</a>
