--- a/6/lib/sparky-aptus-appcenter/net-rss.html
+++ b/6/lib/sparky-aptus-appcenter/net-rss.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 29, 2021 by pavroo
+Last update: March 20, 2022 by pavroo
 -->
 	<head>
 		<title>Network -> Feeds | APTus AppCenter</title>
@@ -44,16 +44,18 @@ Last update: November 29, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netrss_feedreader" class="button1"><img src="images/rss.svg" class="appicon"><br />FeedReader</a>
 		</td>
+		<td><a href="aptus://netrss_fluent-reader" class="button1"><img src="images/rss.svg" class="appicon"><br />Fluent Reader</a>
+		</td>
 		<td><a href="aptus://netrss_gnome-feeds" class="button1"><img src="images/rss.svg" class="appicon"><br />GNOME-Feeds</a>
 		</td>
 		<td><a href="aptus://netrss_liferea" class="button1"><img src="images/rss.svg" class="appicon"><br />Liferea</a>
 		</td>
 		<td><a href="aptus://netrss_newsboat" class="button1"><img src="images/terminal.svg" class="appicon"><br />NewsBoat</a>
 		</td>
-		<td><a href="aptus://netrss_quiterss" class="button1"><img src="images/rss.svg" class="appicon"><br />Quiterss</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netrss_quiterss" class="button1"><img src="images/rss.svg" class="appicon"><br />Quiterss</a>
+		</td>
 		<td><a href="aptus://netrss_raven-reader" class="button1"><img src="images/rss.svg" class="appicon"><br />Raven Reader</a>
 		</td>
 		<td><a href="aptus://netrss_rssguard" class="button1"><img src="images/rss.svg" class="appicon"><br />RSS Guard</a>
