--- a/7/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/7/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 27, 2021 by pavroo
+Last update: March 20, 2022 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -65,13 +65,13 @@ Last update: December 27, 2021 by pavroo
 		<td><a href="aptus://netweb_firefox-esr" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox ESR</a>
 		</td>
 		<!--<td><a href="aptus://netweb_firefox-esr-sparky" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox ESR Mozilla Build</a>
-		</td>-->
+		</td>
 		<td><a href="aptus://netweb_firefox-latest" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox Latest</a>
+		</td>-->
+		<td><a href="aptus://netweb_firefox-sparky" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox Latest Mozilla Build</a>
 		</td>
 	</tr>
 	<tr>
-		<!--<td><a href="aptus://netweb_firefox-sparky" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox Latest Mozilla Build</a>
-		</td>-->
 		<td><a href="aptus://netweb_google-chrome-stable" class="button1"><img src="images/google-chrome.svg" class="appicon"><br />Google Chrome</a>
 		</td>
 		<td><a href="aptus://netweb_hv3" class="button1"><img src="images/web-browser.svg" class="appicon"><br />hv3</a>
