--- a/7/lib/sparky-aptus-appcenter/games-rpg.html
+++ b/7/lib/sparky-aptus-appcenter/games-rpg.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: April 14, 2022 by pavroo
 -->
 	<head>
 		<title>Games -> RPG (Role Playing Game) | APTus AppCenter</title>
@@ -58,7 +58,7 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamrpg_flare-game" class="button1"><img src="images1/flare.svg" class="appicon"><br />Flare</a>
 		</td>
-		<td><a href="aptus://gamrpg_gearhead2-sdl" class="button1"><img src="images1/salut.svg" class="appicon"><br />GearHead 2</a>
+		<td><a href="aptus://gamrpg_gearhead-sdl" class="button1"><img src="images1/salut.svg" class="appicon"><br />GearHead</a>
 		</td>
 		<td><a href="aptus://gamrpg_glhack" class="button1"><img src="images1/salut.svg" class="appicon"><br />glHack</a>
 		</td>
