--- a/7/lib/sparky-aptus-appcenter/games-text.html
+++ b/7/lib/sparky-aptus-appcenter/games-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: January 9, 2022 by pavroo
+Last update: April 14, 2022 by pavroo
 -->
 	<head>
 		<title>Games -> Text | APTus AppCenter</title>
@@ -64,7 +64,7 @@ Last update: January 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gamtex_freesweep" class="button1"><img src="images/terminal.svg" class="appicon"><br />Freesweep</a>
 		</td>
-		<td><a href="aptus://gamtex_gearhead2" class="button1"><img src="images/terminal.svg" class="appicon"><br />GearHead 2</a>
+		<td><a href="aptus://gamtex_gearhead" class="button1"><img src="images/terminal.svg" class="appicon"><br />GearHead</a>
 		</td>
 	</tr>
 	<tr>
