--- a/7/lib/sparky-aptus-appcenter/system-others.html
+++ b/7/lib/sparky-aptus-appcenter/system-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 8, 2021 by pavroo
+Last update: April 14, 2022 by pavroo
 -->
 	<head>
 		<title>System -> Others | APTus AppCenter</title>
@@ -46,9 +46,9 @@ Last update: October 8, 2021 by pavroo
 		</td>
 		<td><a href="aptus://sysoth_cpufrequtils" class="button1"><img src="images/cpuinfo.svg" class="appicon"><br />CPUfrequtils</a>
 		</td>
-		<td><a href="aptus://sysoth_cpupower-gui" class="button1"><img src="images/cpuinfo.svg" class="appicon"><br />CPU Power GUI</a>
-		</td>
 		<td><a href="aptus://sysoth_fcitx" class="button1"><img src="images/fcitx.svg" class="appicon"><br />Fcitx</a>
+		</td>
+		<td><a href="aptus://sysoth_linux-cpupower" class="button1"><img src="images/terminal.svg" class="appicon"><br />Linux CPU Power</a>
 		</td>
 		<td><a href="aptus://sysoth_mariadb-client" class="button1"><img src="images/sql.svg" class="appicon"><br />MariaDB Client</a>
 		</td>
