--- a/6/lib/sparky-aptus-appcenter/system-package.html
+++ b/6/lib/sparky-aptus-appcenter/system-package.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: May 5, 2022 by pavroo
 -->
 	<head>
 		<title>System -> Package Management | APTus AppCenter</title>
@@ -56,18 +56,18 @@ Last update: June 13, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://syspac_gnome-software" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />GNOME Software</a>
 		</td>
+		<td><a href="aptus://syspac_nala-legacy" class="button1"><img src="images/deb.svg" class="appicon"><br />Nala</a>
+		</td>
 		<td><a href="aptus://syspac_plasma-discover" class="button1"><img src="images/system-upgrade.svg" class="appicon">Plasma Discover<br /></a>
 		</td>
 		<td><a href="aptus://syspac_snapd" class="button1"><img src="images/container.svg" class="appicon"><br />snapd</a>
 		</td>
-		<!--<td><a href="aptus://syspac_sparky-aptus" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />SparkyAPTus</a>
-		</td>
-		<td><a href="aptus://syspac_sparky-aptus-appcenter" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />SparkyAPTus AppCenter</a>
-		</td>-->
 		<td><a href="aptus://syspac_sparky-aptus-upgrade" class="button1"><img src="images/system-upgrade-full.svg" class="appicon"><br />SparkyAPTus Upgrade</a>
 		</td>
 		<td><a href="aptus://syspac_sparky-aptus-upgrade-checker" class="button1"><img src="images/system-upgrade-full.svg" class="appicon"><br />SparkyAPTus Upgrade Checker</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://syspac_synaptic" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />Synaptic</a>
 		</td>
 	</tr>
