--- a/7/lib/sparky-aptus-appcenter/accessories-translators.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-translators.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 5, 2021 by pavroo
+Last update: May 5, 2022 by pavroo
 -->
 	<head>
 		<title>Accessories -> Translators | APTus AppCenter</title>
@@ -40,6 +40,8 @@ Last update: December 5, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://acctra_crow-translate" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Crow Translate</a>
+		</td>
 		<td><a href="aptus://acctra_deepl-linux" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />DeepL-Linux</a>
 		</td>
 		<td><a href="aptus://acctra_dialect" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Dialect</a>
@@ -50,10 +52,10 @@ Last update: December 5, 2021 by pavroo
 		</td>
 		<td><a href="aptus://acctra_goldendict" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Golden Dict</a>
 		</td>
-		<td><a href="aptus://acctra_qstardict" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />QStarDict</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://acctra_qstardict" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />QStarDict</a>
+		</td>
 		<td><a href="aptus://acctra_sdcv" class="button1"><img src="images/terminal.svg" class="appicon"><br />StarDict Console</a>
 		</td>
 	</tr>
