--- a/7/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/7/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 14, 2022 by pavroo
+Last update: May 5, 2022 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -132,7 +132,7 @@ Last update: April 14, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netweb_waterfox-classic-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Classic</a>
 		</td>
-		<td><a href="aptus://netweb_waterfox-g4-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Current</a>
+		<td><a href="aptus://netweb_waterfox-g-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Current</a>
 		</td>
 	</tr>
 </tbody>
