--- a/7/lib/sparky-aptus-appcenter/media-videoplayers.html
+++ b/7/lib/sparky-aptus-appcenter/media-videoplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 6, 2022 by pavroo
+Last update: May 29, 2022 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Players | APTus AppCenter</title>
@@ -56,6 +56,8 @@ Last update: March 6, 2022 by pavroo
 	<tr>
 		<td><a href="aptus://vidpla_gnome-mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />GNOME MPV</a>
 		</td>
+		<td><a href="aptus://vidpla_hypnotix" class="button1"><img src="images/totem.svg" class="appicon"><br />Hypnotix</a>
+		</td>
 		<td><a href="aptus://vidpla_kodi" class="button1"><img src="images/totem.svg" class="appicon"><br />Kodi</a>
 		</td>
 		<td><a href="aptus://vidpla_motionbox" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Motionbox</a>
@@ -64,10 +66,10 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />mpv</a>
 		</td>
-		<td><a href="aptus://vidpla_parole" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Parole</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_parole" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Parole</a>
+		</td>
 		<td><a href="aptus://vidpla_popcorn-time" class="button1"><img src="images1/popcorntime.svg" class="appicon"><br />Popcorn Time</a>
 		</td>
 		<td><a href="aptus://vidpla_qtav-players" class="button1"><img src="images/mplayer.svg" class="appicon"><br />QtAV Players</a>
@@ -78,10 +80,10 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_smtube" class="button1"><img src="images/smtube.svg" class="appicon"><br />SMTube</a>
 		</td>
-		<td><a href="aptus://vidpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
+		</td>
 		<td><a href="aptus://vidpla_stremio" class="button1"><img src="images/totem.svg" class="appicon"><br />Stremio</a>
 		</td>
 		<td><a href="aptus://vidpla_totem" class="button1"><img src="images/totem.svg" class="appicon"><br />Totem</a>
