--- a/7/lib/sparky-aptus-appcenter/office-finance.html
+++ b/7/lib/sparky-aptus-appcenter/office-finance.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 27, 2021 by pavroo
+Last update: May 29, 2022 by pavroo
 -->
 	<head>
 		<title>Office -> Finance | APTus AppCenter</title>
@@ -42,6 +42,8 @@ Last update: August 27, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://offfin_aqbanking-tools" class="button1"><img src="images/terminal.svg" class="appicon"><br />AqBanking</a>
 		</td>
+		<td><a href="aptus://offfin_bitcoin" class="button1"><img src="images/bitcoin.svg" class="appicon"><br />Bitcoin Core</a>
+		</td>
 		<td><a href="aptus://offfin_electrum" class="button1"><img src="images/bitcoin.svg" class="appicon"><br />Electrum</a>
 		</td>
 		<td><a href="aptus://offfin_eqonomize" class="button1"><img src="images/vcard.svg" class="appicon"><br />Eqonomize!</a>
@@ -50,13 +52,13 @@ Last update: August 27, 2021 by pavroo
 		</td>
 		<td><a href="aptus://offfin_homebank" class="button1"><img src="images/vcard.svg" class="appicon"><br />HomeBank</a>
 		</td>
-		<td><a href="aptus://offfin_kmymoney" class="button1"><img src="images/vcard.svg" class="appicon"><br />KMyMoney</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offfin_kmymoney" class="button1"><img src="images/vcard.svg" class="appicon"><br />KMyMoney</a>
+		</td>
 		<td><a href="aptus://offfin_ledger" class="button1"><img src="images/terminal.svg" class="appicon"><br />Ledger</a>
 		</td>
-		<td><a href="aptus://offfin_litecoin-qt" class="button1"><img src="images/bitcoin.svg" class="appicon"><br />Litecoin</a>
+		<td><a href="aptus://offfin_litecoin-qt" class="button1"><img src="images/bitcoin.svg" class="appicon"><br />Litecoin-Qt</a>
 		</td>
 		<td><a href="aptus://offfin_monero" class="button1"><img src="images/bitcoin.svg" class="appicon"><br />Monero Client</a>
 		</td>
