--- a/7/lib/sparky-aptus-appcenter/system-virtual.html
+++ b/7/lib/sparky-aptus-appcenter/system-virtual.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 28, 2021 by pavroo
+Last update: May 29, 2022 by pavroo
 -->
 	<head>
 		<title>System -> Virtualization | APTus AppCenter</title>
@@ -40,20 +40,24 @@ Last update: October 28, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://sysvir_aqemu" class="button1"><img src="images/qemu.svg" class="appicon"><br />AQEMU</a>
+		</td>
 		<td><a href="aptus://sysvir_docker.io" class="button1"><img src="images/container.svg" class="appicon"><br />Docker</a>
 		</td>
 		<td><a href="aptus://sysvir_gnome-boxes" class="button1"><img src="images/gnome-boxes.svg" class="appicon"><br />GNOME Boxes</a>
 		</td>
 		<td><a href="aptus://sysvir_default-jre" class="button1"><img src="images/java.svg" class="appicon"><br />Java Runtime (OpenJRE)</a>
 		</td>
-		<td><a href="aptus://sysvir_qemu" class="button1"><img src="images/default-icon.svg" class="appicon"><br />QEMU</a>
+		<td><a href="aptus://sysvir_qemu-system" class="button1"><img src="images/qemu.svg" class="appicon"><br />QEMU</a>
 		</td>
+		<td><a href="aptus://sysvir_qemu-system-gui" class="button1"><img src="images/qemu.svg" class="appicon"><br />QEMU System GUI</a>
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://sysvir_virtinst" class="button1"><img src="images/terminal.svg" class="appicon"><br />VirtInst</a>
 		</td>
 		<td><a href="aptus://sysvir_virt-manager" class="button1"><img src="images/virt-manager.svg" class="appicon"><br />Virt Manager</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://sysvir_virt-viewer" class="button1"><img src="images/virt-manager.svg" class="appicon"><br />Virt Viewer</a>
 		</td>
 		<td><a href="aptus://sysvir_virtualbox" class="button1"><img src="images/vbox.svg" class="appicon"><br />VirtualBox</a>
