--- a/7/lib/sparky-aptus-appcenter/accessories-devices.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-devices.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: June 7, 2022 by pavroo
 -->
 	<head>
 		<title>Accessories -> Devices | APTus AppCenter</title>
@@ -64,10 +64,12 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accdev_lxrandr" class="button1"><img src="images/display.svg" class="appicon"><br />LXrandR</a>
 		</td>
-		<td><a href="aptus://accdev_matchbox-keyboard" class="button1"><img src="images/keyboard2.svg" class="appicon"><br />Matchbox Keyboard</a>
+		<td><a href="aptus://accdev_magnus" class="button1"><img src="images/search.svg" class="appicon"><br />Magnus</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accdev_matchbox-keyboard" class="button1"><img src="images/keyboard2.svg" class="appicon"><br />Matchbox Keyboard</a>
+		</td>
 		<td><a href="aptus://accdev_mousetweaks" class="button1"><img src="images/mouse.svg" class="appicon"><br />Mouse Tweaks</a>
 		</td>
 		<td><a href="aptus://accdev_nuntius" class="button1"><img src="images/smartphone.svg" class="appicon"><br />Nuntius</a>
@@ -78,10 +80,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accdev_onboard" class="button1"><img src="images/keyboard2.svg" class="appicon"><br />On-screen Keyboard</a>
 		</td>
-		<td><a href="aptus://accdev_qml-module-qtbluetooth" class="button1"><img src="images/bluetooth.svg" class="appicon"><br />Qml Module Qt Bluetooth</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accdev_qml-module-qtbluetooth" class="button1"><img src="images/bluetooth.svg" class="appicon"><br />Qml Module Qt Bluetooth</a>
+		</td>
 		<td><a href="aptus://accdev_sparky-libinput" class="button1"><img src="images/touchpad.svg" class="appicon"><br />Sparky Libinput</a>
 		</td>
 		<td><a href="aptus://accdev_system-config-printer" class="button1"><img src="images/printer.svg" class="appicon"><br />System Config Printer</a>
