--- a/6/lib/sparky-aptus-appcenter/games-winapi.html
+++ b/6/lib/sparky-aptus-appcenter/games-winapi.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: June 26, 2022 by pavroo
 -->
 	<head>
 		<title>Games -> Win API | APTus AppCenter</title>
@@ -51,6 +51,10 @@ Last update: June 13, 2021 by pavroo
 		<td><a href="aptus://gamwin_fonts-wine" class="button1"><img src="images/fonts.svg" class="appicon"><br />Wine Fonts</a>
 		</td>
 		<td><a href="aptus://gamwin_winetricks" class="button1"><img src="images/terminal.svg" class="appicon"><br />winetricks</a>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://gamwin_winezgui" class="button1"><img src="images1/wine.svg" class="appicon"><br />WineZGUI</a>
 		</td>
 	</tr>
 </tbody>
