--- a/7/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/7/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 14, 2022 by pavroo
+Last update: June 26, 2022 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Players | APTus AppCenter</title>
@@ -42,8 +42,8 @@ Last update: April 14, 2022 by pavroo
 	<tr>
 		<td><a href="aptus://audpla_alsaplayer-gtk" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />AlsaPlayer GUI</a>
 		</td>
-		<td><a href="aptus://audpla_amarok" class="button1"><img src="images/amarok.svg" class="appicon"><br />Amarok</a>
-		</td>
+		<!--<td><a href="aptus://audpla_amarok" class="button1"><img src="images/amarok.svg" class="appicon"><br />Amarok</a>
+		</td>-->>
 		<td><a href="aptus://audpla_ario" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Ario</a>
 		</td>
 		<td><a href="aptus://audpla_audacious" class="button1"><img src="images/audacious.svg" class="appicon"><br />Audacious</a>
@@ -52,10 +52,10 @@ Last update: April 14, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_cantata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Cantata</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_cmus" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Cmus</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_cozy" class="button1"><img src="images/audio-headphones.svg" class="appicon"><br />Cozy</a>
 		</td>
 		<td><a href="aptus://audpla_daisy-player" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Daisy Player</a>
@@ -66,10 +66,10 @@ Last update: April 14, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_dradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Dradio</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_elisa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Elisa</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_exaile" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Exaile</a>
 		</td>
 		<td><a href="aptus://audpla_foobnix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Foobnix</a>
@@ -80,10 +80,10 @@ Last update: April 14, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_gogglesmm" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goggles Music Manager</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_goobox" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goobox</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_gradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Gradio</a>
 		</td>
 		<td><a href="aptus://audpla_jampal" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jampal</a>
@@ -94,10 +94,10 @@ Last update: April 14, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_moc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MOC</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_mpd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MPD</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_ncmpc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />ncmpc</a>
 		</td>
 		<td><a href="aptus://audpla_nuclear" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Nuclear</a>
@@ -108,10 +108,10 @@ Last update: April 14, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_pragha" class="button1"><img src="images/play-music.svg" class="appicon"><br />Pragha</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_qmmp" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />QMMP</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_quodlibet" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Quod Libet</a>
 		</td>
 		<td><a href="aptus://audpla_radio" class="button1"><img src="images/radio.svg" class="appicon"><br />Radio</a>
@@ -122,10 +122,10 @@ Last update: April 14, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_sayonara" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Sayonara</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_shortwave" class="button1"><img src="images/radio.svg" class="appicon"><br />ShortWave</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
 		</td>
 		<td><a href="aptus://audpla_sonata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Sonata</a>
@@ -136,10 +136,10 @@ Last update: April 14, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_spotify-client" class="button1"><img src="images/spotify.svg" class="appicon"><br />Spotify Client</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_strawberry" class="button1"><img src="images0/strawberry.svg" class="appicon"><br />Strawberry</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_xmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />XMMS2</a>
 		</td>
 		<td><a href="aptus://audpla_yarock" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Yarock</a>
