--- a/6/lib/sparky-aptus-appcenter/games-strategy.html
+++ b/6/lib/sparky-aptus-appcenter/games-strategy.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: August 9, 2022 by pavroo
 -->
 	<head>
 		<title>Games -> Strategy | APTus AppCenter</title>
@@ -40,6 +40,8 @@ Last update: June 13, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://gamstr_0ad" class="button1"><img src="images1/game.svg" class="appicon"><br />0 A.D.</a>
+		</td>
 		<td><a href="aptus://gamstr_7kaa" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />7kaa</a>
 		</td>
 		<td><a href="aptus://gamstr_asc" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Advanced Strategic Comand</a>
@@ -50,10 +52,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamstr_dopewars" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Dopewars</a>
 		</td>
-		<td><a href="aptus://gamstr_empire" class="button1"><img src="images/terminal.svg" class="appicon"><br />Empire</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamstr_empire" class="button1"><img src="images/terminal.svg" class="appicon"><br />Empire</a>
+		</td>
 		<td><a href="aptus://gamstr_freeciv" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Freeciv</a>
 		</td>
 		<td><a href="aptus://gamstr_freecol" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Freecol</a>
@@ -64,10 +66,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamstr_kdiamond" class="button1"><img src="images/ruby.svg" class="appicon"><br />Kdiamond</a>
 		</td>
-		<td><a href="aptus://gamstr_killbots" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Killbots</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamstr_killbots" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Killbots</a>
+		</td>
 		<td><a href="aptus://gamstr_konquest" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Konquest</a>
 		</td>
 		<td><a href="aptus://gamstr_ksirk" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />KsirK</a>
@@ -78,10 +80,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamstr_lordsawar" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Lordsawar</a>
 		</td>
-		<td><a href="aptus://gamstr_megaglest" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />MegaGlest</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamstr_megaglest" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />MegaGlest</a>
+		</td>
 		<td><a href="aptus://gamstr_netpanzer" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />netPanzer</a>
 		</td>
 		<td><a href="aptus://gamstr_openclonk" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />OpenClonk</a>
@@ -92,10 +94,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamstr_planetblupi" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Planet Blupi</a>
 		</td>
-		<td><a href="aptus://gamstr_qonk" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Qonk</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamstr_qonk" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Qonk</a>
+		</td>
 		<td><a href="aptus://gamstr_ri-li" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Ri-li</a>
 		</td>
 		<td><a href="aptus://gamstr_runescape" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Runescape</a>
@@ -106,10 +108,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamstr_spellcast" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Spellcast</a>
 		</td>
-		<td><a href="aptus://gamstr_spring" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Spring</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamstr_spring" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Spring</a>
+		</td>
 		<td><a href="aptus://gamstr_triplea" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />TripleA</a>
 		</td>
 		<td><a href="aptus://gamstr_uqm" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Ur-Quan Masters</a>
@@ -120,10 +122,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamstr_warzone2100" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Warzone2100</a>
 		</td>
-		<td><a href="aptus://gamstr_wesnoth" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Wesnoth</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamstr_wesnoth" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Wesnoth</a>
+		</td>
 		<td><a href="aptus://gamstr_widelands" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Widelands</a>
 		</td>
 		<td><a href="aptus://gamstr_xscorch"xscorch class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Xscorch</a>
