--- a/7/lib/sparky-aptus-appcenter/games-arcade.html
+++ b/7/lib/sparky-aptus-appcenter/games-arcade.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: August 9, 2022 by pavroo
 -->
 	<head>
 		<title>Games -> Arcade A-G | APTus AppCenter</title>
@@ -40,11 +40,11 @@ Last update: June 13, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://gamarc1_0ad" class="button1"><img src="images1/game.svg" class="appicon"><br />0 A.D.</a>
-		</td>
-		<td><a href="aptus://gamarc1_a7xpg" class="button1"><img src="images1/game.svg" class="appicon"><br />A7Zpg</a>
+		<td><a href="aptus://gamarc1_a7xpg" class="button1"><img src="images1/game.svg" class="appicon"><br />A7Xpg</a>
 		</td>
 		<td><a href="aptus://gamarc1_abe" class="button1"><img src="images1/game.svg" class="appicon"><br />Abe</a>
+		</td>
+		<td><a href="aptus://gamarc1_acm" class="button1"><img src="images1/game.svg" class="appicon"><br />ACM</a>
 		</td>
 		<td><a href="aptus://gamarc1_airstrike" class="button1"><img src="images1/game.svg" class="appicon"><br />Airstrike</a>
 		</td>
