--- a/7/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/7/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 26, 2022 by pavroo
+Last update: August 9, 2022 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Players | APTus AppCenter</title>
@@ -74,16 +74,18 @@ Last update: June 26, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_foobnix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Foobnix</a>
 		</td>
+		<td><a href="aptus://audpla_g4music" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />g4music</a>
+		</td>
 		<td><a href="aptus://audpla_gmerlin" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Gmerlin</a>
 		</td>
 		<td><a href="aptus://audpla_gnome-music" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />GNOME Music</a>
 		</td>
 		<td><a href="aptus://audpla_gogglesmm" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goggles Music Manager</a>
 		</td>
-		<td><a href="aptus://audpla_goobox" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goobox</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_goobox" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goobox</a>
+		</td>
 		<td><a href="aptus://audpla_gradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Gradio</a>
 		</td>
 		<td><a href="aptus://audpla_jampal" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jampal</a>
@@ -94,10 +96,10 @@ Last update: June 26, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_moc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MOC</a>
 		</td>
-		<td><a href="aptus://audpla_mpd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MPD</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_mpd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MPD</a>
+		</td>
 		<td><a href="aptus://audpla_ncmpc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />ncmpc</a>
 		</td>
 		<td><a href="aptus://audpla_nuclear" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Nuclear</a>
@@ -108,10 +110,10 @@ Last update: June 26, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_pragha" class="button1"><img src="images/play-music.svg" class="appicon"><br />Pragha</a>
 		</td>
-		<td><a href="aptus://audpla_qmmp" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />QMMP</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_qmmp" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />QMMP</a>
+		</td>
 		<td><a href="aptus://audpla_quodlibet" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Quod Libet</a>
 		</td>
 		<td><a href="aptus://audpla_radio" class="button1"><img src="images/radio.svg" class="appicon"><br />Radio</a>
@@ -122,10 +124,10 @@ Last update: June 26, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_sayonara" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Sayonara</a>
 		</td>
-		<td><a href="aptus://audpla_shortwave" class="button1"><img src="images/radio.svg" class="appicon"><br />ShortWave</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_shortwave" class="button1"><img src="images/radio.svg" class="appicon"><br />ShortWave</a>
+		</td>
 		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
 		</td>
 		<td><a href="aptus://audpla_sonata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Sonata</a>
@@ -136,10 +138,10 @@ Last update: June 26, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_spotify-client" class="button1"><img src="images/spotify.svg" class="appicon"><br />Spotify Client</a>
 		</td>
-		<td><a href="aptus://audpla_strawberry" class="button1"><img src="images0/strawberry.svg" class="appicon"><br />Strawberry</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_strawberry" class="button1"><img src="images0/strawberry.svg" class="appicon"><br />Strawberry</a>
+		</td>
 		<td><a href="aptus://audpla_xmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />XMMS2</a>
 		</td>
 		<td><a href="aptus://audpla_yarock" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Yarock</a>
