--- a/7/lib/sparky-aptus-appcenter/media-videoplayers.html
+++ b/7/lib/sparky-aptus-appcenter/media-videoplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: May 29, 2022 by pavroo
+Last update: August 9, 2022 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Players | APTus AppCenter</title>
@@ -46,14 +46,16 @@ Last update: May 29, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_celluloid" class="button1"><img src="images/mpv.svg" class="appicon"><br />Celluloid</a>
 		</td>
+		<td><a href="aptus://vidpla_clapper" class="button1"><img src="images/mpv.svg" class="appicon"><br />Clapper</a>
+		</td>
 		<td><a href="aptus://vidpla_electronplayer" class="button1"><img src="images/smtube.svg" class="appicon"><br />ElectronPlayer</a>
 		</td>
 		<td><a href="aptus://vidpla_freetube" class="button1"><img src="images/smtube.svg" class="appicon"><br />FreeTube</a>
 		</td>
-		<td><a href="aptus://vidpla_freetuxtv" class="button1"><img src="images/totem.svg" class="appicon"><br />FreetuxTV</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_freetuxtv" class="button1"><img src="images/totem.svg" class="appicon"><br />FreetuxTV</a>
+		</td>
 		<td><a href="aptus://vidpla_gnome-mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />GNOME MPV</a>
 		</td>
 		<td><a href="aptus://vidpla_hypnotix" class="button1"><img src="images/totem.svg" class="appicon"><br />Hypnotix</a>
@@ -64,10 +66,10 @@ Last update: May 29, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_mplayer" class="button1"><img src="images/mplayer.svg" class="appicon"><br />MPlayer</a>
 		</td>
-		<td><a href="aptus://vidpla_mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />mpv</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />mpv</a>
+		</td>
 		<td><a href="aptus://vidpla_parole" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Parole</a>
 		</td>
 		<td><a href="aptus://vidpla_popcorn-time" class="button1"><img src="images1/popcorntime.svg" class="appicon"><br />Popcorn Time</a>
@@ -78,10 +80,10 @@ Last update: May 29, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_smplayer" class="button1"><img src="images/smplayer.svg" class="appicon"><br />SMPlayer</a>
 		</td>
-		<td><a href="aptus://vidpla_smtube" class="button1"><img src="images/smtube.svg" class="appicon"><br />SMTube</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_smtube" class="button1"><img src="images/smtube.svg" class="appicon"><br />SMTube</a>
+		</td>
 		<td><a href="aptus://vidpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
 		</td>
 		<td><a href="aptus://vidpla_stremio" class="button1"><img src="images/totem.svg" class="appicon"><br />Stremio</a>
@@ -92,6 +94,8 @@ Last update: May 29, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_xine-console" class="button1"><img src="images/xine.svg" class="appicon"><br />xine-console</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://vidpla_xine-ui" class="button1"><img src="images/xine.svg" class="appicon"><br />xine-ui</a>
 		</td>
 	</tr>
