--- a/7/lib/sparky-aptus-appcenter/system-virtual.html
+++ b/7/lib/sparky-aptus-appcenter/system-virtual.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: May 29, 2022 by pavroo
+Last update: August 9, 2022 by pavroo
 -->
 	<head>
 		<title>System -> Virtualization | APTus AppCenter</title>
@@ -46,14 +46,16 @@ Last update: May 29, 2022 by pavroo
 		</td>
 		<td><a href="aptus://sysvir_gnome-boxes" class="button1"><img src="images/gnome-boxes.svg" class="appicon"><br />GNOME Boxes</a>
 		</td>
+		<td><a href="aptus://sysvir_gxemul" class="button1"><img src="images/virt-manager.svg" class="appicon"><br />GXemul</a>
+		</td>
 		<td><a href="aptus://sysvir_default-jre" class="button1"><img src="images/java.svg" class="appicon"><br />Java Runtime (OpenJRE)</a>
 		</td>
 		<td><a href="aptus://sysvir_qemu-system" class="button1"><img src="images/qemu.svg" class="appicon"><br />QEMU</a>
 		</td>
-		<td><a href="aptus://sysvir_qemu-system-gui" class="button1"><img src="images/qemu.svg" class="appicon"><br />QEMU System GUI</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://sysvir_qemu-system-gui" class="button1"><img src="images/qemu.svg" class="appicon"><br />QEMU System GUI</a>
+		</td>
 		<td><a href="aptus://sysvir_virtinst" class="button1"><img src="images/terminal.svg" class="appicon"><br />VirtInst</a>
 		</td>
 		<td><a href="aptus://sysvir_virt-manager" class="button1"><img src="images/virt-manager.svg" class="appicon"><br />Virt Manager</a>
