--- a/6/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/6/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 23, 2021 by pavroo
+Last update: September 28, 2022 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Players | APTus AppCenter</title>
@@ -96,6 +96,8 @@ Last update: July 23, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_lollypop" class="button1"><img src="images/lollypop.svg" class="appicon"><br />Lollypop</a>
+		</td>
 		<td><a href="aptus://audpla_lxmusic" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />LXMusic</a>
 		</td>
 		<td><a href="aptus://audpla_mellowplayer" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />MellowPlayer</a>
@@ -106,10 +108,10 @@ Last update: July 23, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_ncmpc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />ncmpc</a>
 		</td>
-		<td><a href="aptus://audpla_nuclear" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Nuclear</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_nuclear" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Nuclear</a>
+		</td>
 		<td><a href="aptus://audpla_pmrp" class="button1"><img src="images/radio.svg" class="appicon"><br />PMRP</a>
 		</td>
 		<td><a href="aptus://audpla_pogo" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pogo</a>
@@ -120,10 +122,10 @@ Last update: July 23, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_quodlibet" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Quod Libet</a>
 		</td>
-		<td><a href="aptus://audpla_radio" class="button1"><img src="images/radio.svg" class="appicon"><br />Radio</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_radio" class="button1"><img src="images/radio.svg" class="appicon"><br />Radio</a>
+		</td>
 		<td><a href="aptus://audpla_radiostation" class="button1"><img src="images/radio.svg" class="appicon"><br />RadioStation</a>
 		</td>
 		<td><a href="aptus://audpla_rhythmbox" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Rhythmbox</a>
@@ -134,10 +136,10 @@ Last update: July 23, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
 		</td>
-		<td><a href="aptus://audpla_sonata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Sonata</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_sonata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Sonata</a>
+		</td>
 		<td><a href="aptus://audpla_sparky-play" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Play MP3</a>
 		</td>
 		<td><a href="aptus://audpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
@@ -148,6 +150,8 @@ Last update: July 23, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_xmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />XMMS2</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_yarock" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Yarock</a>
 		</td>
 	</tr>
