--- a/7/lib/sparky-aptus-appcenter/media-videoplayers.html
+++ b/7/lib/sparky-aptus-appcenter/media-videoplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 9, 2022 by pavroo
+Last update: September 29, 2022 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Players | APTus AppCenter</title>
@@ -62,14 +62,14 @@ Last update: August 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_kodi" class="button1"><img src="images/totem.svg" class="appicon"><br />Kodi</a>
 		</td>
-		<td><a href="aptus://vidpla_motionbox" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Motionbox</a>
-		</td>
+		<!--<td><a href="aptus://vidpla_motionbox" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Motionbox</a>
+		</td>-->
 		<td><a href="aptus://vidpla_mplayer" class="button1"><img src="images/mplayer.svg" class="appicon"><br />MPlayer</a>
+		</td>
+		<td><a href="aptus://vidpla_mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />mpv</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://vidpla_mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />mpv</a>
-		</td>
 		<td><a href="aptus://vidpla_parole" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Parole</a>
 		</td>
 		<td><a href="aptus://vidpla_popcorn-time" class="button1"><img src="images1/popcorntime.svg" class="appicon"><br />Popcorn Time</a>
@@ -80,10 +80,11 @@ Last update: August 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_smplayer" class="button1"><img src="images/smplayer.svg" class="appicon"><br />SMPlayer</a>
 		</td>
-	</tr>
-	<tr>
+
 		<td><a href="aptus://vidpla_smtube" class="button1"><img src="images/smtube.svg" class="appicon"><br />SMTube</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://vidpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
 		</td>
 		<td><a href="aptus://vidpla_stremio" class="button1"><img src="images/totem.svg" class="appicon"><br />Stremio</a>
@@ -94,8 +95,6 @@ Last update: August 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_xine-console" class="button1"><img src="images/xine.svg" class="appicon"><br />xine-console</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://vidpla_xine-ui" class="button1"><img src="images/xine.svg" class="appicon"><br />xine-ui</a>
 		</td>
 	</tr>
