--- a/6/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/6/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 6, 2022 by pavroo
+Last update: September 28, 2022 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -50,10 +50,12 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accoth_catfish" class="button1"><img src="images1/catfish.svg" class="appicon"><br />Catfish</a>
 		</td>
-		<td><a href="aptus://accoth_ding" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Ding</a>
+		<td><a href="aptus://accoth_compiz" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Compiz</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_ding" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Ding</a>
+		</td>
 		<td><a href="aptus://accoth_fbpanel" class="button1"><img src="images1/panel.svg" class="appicon"><br />Fbpanel</a>
 		</td>
 		<td><a href="aptus://accoth_font-manager" class="button1"><img src="images/fonts.svg" class="appicon"><br />Font Manager</a>
@@ -64,10 +66,10 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accoth_gjiten" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Gjiten</a>
 		</td>
-		<td><a href="aptus://accoth_i3lock" class="button1"><img src="images/screensaver.svg" class="appicon"><br />i3lock</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_i3lock" class="button1"><img src="images/screensaver.svg" class="appicon"><br />i3lock</a>
+		</td>
 		<td><a href="aptus://accoth_i3lock-fancy" class="button1"><img src="images/screensaver.svg" class="appicon"><br />i3lock fancy</a>
 		</td>
 		<td><a href="aptus://accoth_jgmenu" class="button1"><img src="images1/panel.svg" class="appicon"><br />Jgmenu</a>
@@ -78,10 +80,10 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accoth_kupfer" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Kupfer</a>
 		</td>
-		<td><a href="aptus://accoth_latte-dock" class="button1"><img src="images/dock.svg" class="appicon"><br />Latte Dock</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_latte-dock" class="button1"><img src="images/dock.svg" class="appicon"><br />Latte Dock</a>
+		</td>
 		<td><a href="aptus://accoth_light-locker" class="button1"><img src="images/screensaver.svg" class="appicon"><br />Light Locker</a>
 		</td>
 		<td><a href="aptus://accoth_menulibre" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />MenuLibre</a>
@@ -92,10 +94,10 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accoth_obconf-qt" class="button1"><img src="images1/obconf.svg" class="appicon"><br />ObConf Qt</a>
 		</td>
-		<td><a href="aptus://accoth_picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Picom</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Picom</a>
+		</td>
 		<td><a href="aptus://accoth_plank" class="button1"><img src="images/dock.svg" class="appicon"><br />Plank</a>
 		</td>
 		<td><a href="aptus://accoth_qreator" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />Qreator</a>
@@ -106,10 +108,10 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accoth_rofi" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Rofi</a>
 		</td>
-		<td><a href="aptus://accoth_sparky-about" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky About</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_sparky-about" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky About</a>
+		</td>
 		<td><a href="aptus://accoth_sparky-backlight" class="button1"><img src="images/backlight.svg" class="appicon"><br />Sparky BackLight</a>
 		</td>
 		<td><a href="aptus://accoth_sparky-dashboard" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />Sparky Dashboard</a>
@@ -121,10 +123,10 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accoth_synapse" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Synapse</a>
 		</td>
-		<td><a href="aptus://accoth_tint2" class="button1"><img src="images1/panel.svg" class="appicon"><br />Tint2</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_tint2" class="button1"><img src="images1/panel.svg" class="appicon"><br />Tint2</a>
+		</td>
 		<td><a href="aptus://accoth_ulauncher" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Ulauncher</a>
 		</td>
 		<td><a href="aptus://accoth_vala-panel" class="button1"><img src="images1/panel.svg" class="appicon"><br />Vala Panel</a>
@@ -135,10 +137,10 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accoth_webapp-manager" class="button1"><img src="images/web-browser.svg" class="appicon"><br />WebApp Manager</a>
 		</td>
-		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
+		</td>
 		<td><a href="aptus://accoth_zbarcam-qt" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />ZBarcam Qt</a>
 		</td>
 	</tr>
