--- a/7/lib/sparky-aptus-appcenter/accessories-terminals.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-terminals.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 24, 2021 by pavroo
+Last update: September 28, 2022 by pavroo
 -->
 	<head>
 		<title>Accessories -> Terminal Emulators | APTus AppCenter</title>
@@ -60,14 +60,16 @@ Last update: September 24, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accter_guake" class="button1"><img src="images/terminal.svg" class="appicon"><br />Guake</a>
 		</td>
+		<td><a href="aptus://accter_kitty" class="button1"><img src="images/terminal.svg" class="appicon"><br />Kitty</a>
+		</td>
 		<td><a href="aptus://accter_konsole" class="button1"><img src="images/terminal.svg" class="appicon"><br />Konsole</a>
 		</td>
 		<td><a href="aptus://accter_lxterminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />LXterminal</a>
 		</td>
-		<td><a href="aptus://accter_mate-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />MATE Terminal</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accter_mate-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />MATE Terminal</a>
+		</td>
 		<td><a href="aptus://accter_mlterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />MLterm</a>
 		</td>
 		<td><a href="aptus://accter_pangoterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Pangoterm</a>
@@ -78,10 +80,10 @@ Last update: September 24, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accter_sakura" class="button1"><img src="images/terminal.svg" class="appicon"><br />Sakura</a>
 		</td>
-		<td><a href="aptus://accter_spterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />SPterm</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accter_spterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />SPterm</a>
+		</td>
 		<td><a href="aptus://accter_stterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />STterm</a>
 		</td>
 		<td><a href="aptus://accter_terminator" class="button1"><img src="images/terminal.svg" class="appicon"><br />Terminator</a>
@@ -92,10 +94,10 @@ Last update: September 24, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accter_tilda" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilda</a>
 		</td>
-		<td><a href="aptus://accter_tilix" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilix</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accter_tilix" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilix</a>
+		</td>
 		<td><a href="aptus://accter_xfce4-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />Xfce4 Terminal</a>
 		</td>
 		<td><a href="aptus://accter_xterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Xterm </a>
