--- a/7/lib/sparky-aptus-appcenter/accessories-themes.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-themes.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 29, 2021 by pavroo
+Last update: September 28, 2022 by pavroo
 -->
 	<head>
 		<title>Accessories -> Desktop Themes | APTus AppCenter</title>
@@ -153,6 +153,8 @@ Last update: November 29, 2021 by pavroo
 	</tr>
 	<tr>
 		<td><a href="aptus://accthe_sparky6-theme" class="button1"><img src="images/desktop-grey.svg" class="appicon"><br />Sparky6</a>
+		</td>
+		<td><a href="aptus://accthe_sparky7-theme" class="button1"><img src="images/desktop-grey.svg" class="appicon"><br />Sparky7</a>
 		</td>
 		<td><a href="aptus://accthe_ukui-themes" class="button1"><img src="images/desktop-grey.svg" class="appicon"><br />UKUI</a>
 		</td>
