--- a/7/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/7/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 9, 2022 by pavroo
+Last update: September 28, 2022 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Players | APTus AppCenter</title>
@@ -44,6 +44,8 @@ Last update: August 9, 2022 by pavroo
 		</td>
 		<!--<td><a href="aptus://audpla_amarok" class="button1"><img src="images/amarok.svg" class="appicon"><br />Amarok</a>
 		</td>-->>
+		<td><a href="aptus://audpla_amberol" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Amberol</a>
+		</td>
 		<td><a href="aptus://audpla_ario" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Ario</a>
 		</td>
 		<td><a href="aptus://audpla_audacious" class="button1"><img src="images/audacious.svg" class="appicon"><br />Audacious</a>
@@ -52,10 +54,10 @@ Last update: August 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_cantata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Cantata</a>
 		</td>
-		<td><a href="aptus://audpla_cmus" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Cmus</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_cmus" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Cmus</a>
+		</td>
 		<td><a href="aptus://audpla_cozy" class="button1"><img src="images/audio-headphones.svg" class="appicon"><br />Cozy</a>
 		</td>
 		<td><a href="aptus://audpla_daisy-player" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Daisy Player</a>
@@ -66,10 +68,10 @@ Last update: August 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_dradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Dradio</a>
 		</td>
-		<td><a href="aptus://audpla_elisa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Elisa</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_elisa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Elisa</a>
+		</td>
 		<td><a href="aptus://audpla_exaile" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Exaile</a>
 		</td>
 		<td><a href="aptus://audpla_foobnix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Foobnix</a>
@@ -80,10 +82,10 @@ Last update: August 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_gnome-music" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />GNOME Music</a>
 		</td>
-		<td><a href="aptus://audpla_gogglesmm" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goggles Music Manager</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_gogglesmm" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goggles Music Manager</a>
+		</td>
 		<td><a href="aptus://audpla_goobox" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goobox</a>
 		</td>
 		<td><a href="aptus://audpla_gradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Gradio</a>
@@ -92,12 +94,14 @@ Last update: August 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_juk" class="button1"><img src="images/juk.svg" class="appicon"><br />JuK</a>
 		</td>
+		<td><a href="aptus://audpla_lollypop" class="button1"><img src="images/lollypop.svg" class="appicon"><br />Lollypop</a>
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_mellowplayer" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />MellowPlayer</a>
 		</td>
 		<td><a href="aptus://audpla_moc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MOC</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_mpd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MPD</a>
 		</td>
 		<td><a href="aptus://audpla_ncmpc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />ncmpc</a>
@@ -106,12 +110,12 @@ Last update: August 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_pmrp" class="button1"><img src="images/radio.svg" class="appicon"><br />PMRP</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_pogo" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pogo</a>
 		</td>
 		<td><a href="aptus://audpla_pragha" class="button1"><img src="images/play-music.svg" class="appicon"><br />Pragha</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_qmmp" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />QMMP</a>
 		</td>
 		<td><a href="aptus://audpla_quodlibet" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Quod Libet</a>
@@ -120,12 +124,12 @@ Last update: August 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_radiostation" class="button1"><img src="images/radio.svg" class="appicon"><br />RadioStation</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_rhythmbox" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Rhythmbox</a>
 		</td>
 		<td><a href="aptus://audpla_sayonara" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Sayonara</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_shortwave" class="button1"><img src="images/radio.svg" class="appicon"><br />ShortWave</a>
 		</td>
 		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
@@ -134,12 +138,12 @@ Last update: August 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_sparky-play" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Play MP3</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
 		</td>
 		<td><a href="aptus://audpla_spotify-client" class="button1"><img src="images/spotify.svg" class="appicon"><br />Spotify Client</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_strawberry" class="button1"><img src="images0/strawberry.svg" class="appicon"><br />Strawberry</a>
 		</td>
 		<td><a href="aptus://audpla_xmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />XMMS2</a>
