--- a/6/lib/sparky-aptus-appcenter/net-others.html
+++ b/6/lib/sparky-aptus-appcenter/net-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: November 12, 2022 by pavroo
 -->
 	<head>
 		<title>Network -> Others | APTus AppCenter</title>
@@ -46,10 +46,14 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netoth_megasync" class="button1"><img src="images/megasync.svg" class="appicon"><br />MegaSync</a>
 		</td>
+		<td><a href="aptus://netoth_onedrive" class="button1"><img src="images/network.svg" class="appicon"><br />OneDrive</a>
+		</td>
 		<td><a href="aptus://netoth_onionshare" class="button1"><img src="images/network.svg" class="appicon"><br />OnionShare</a>
 		</td>
 		<td><a href="aptus://netoth_spideroakone" class="button1"><img src="images/network.svg" class="appicon"><br />SpiderOakONE</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netoth_warpinator" class="button1"><img src="images/network.svg" class="appicon"><br />Warpinator</a>
 		</td>
 	</tr>
