--- a/6/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/6/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: May 5, 2022 by pavroo
+Last update: November 12, 2022 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -44,16 +44,18 @@ Last update: May 5, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netweb_beaker-browser" class="button1"><img src="images0/beaker-browser.png" class="appicon"><br />Beaker</a>
 		</td>
+		<td><a href="aptus://netweb_blisk-browser-stable" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Blisk</a>
+		</td>
 		<td><a href="aptus://netweb_brave-browser" class="button1"><img src="images/brave.svg" class="appicon"><br />Brave</a>
 		</td>
 		<td><a href="aptus://netweb_browsh" class="button1"><img src="images/terminal.svg" class="appicon"><br />Browsh</a>
 		</td>
 		<td><a href="aptus://netweb_chromium" class="button1"><img src="images/chromium.svg" class="appicon"><br />Chromium</a>
 		</td>
-		<td><a href="aptus://netweb_cyberfox" class="button1"><img src="images0/cyberfox.png" class="appicon"><br />Cyberfox</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_cyberfox" class="button1"><img src="images0/cyberfox.png" class="appicon"><br />Cyberfox</a>
+		</td>
 		<td><a href="aptus://netweb_dillo" class="button1"><img src="images0/dillo.png" class="appicon"><br />Dillo</a>
 		</td>
 		<td><a href="aptus://netweb_dooble" class="button1"><img src="images0/dooble.png" class="appicon"><br />Dooble</a>
@@ -64,10 +66,10 @@ Last update: May 5, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netweb_falkon" class="button1"><img src="images0/falkon.png" class="appicon"><br />Falkon</a>
 		</td>
-		<td><a href="aptus://netweb_firefox-esr" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox ESR</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_firefox-esr" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox ESR</a>
+		</td>
 		<td><a href="aptus://netweb_firefox-sparky" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox Latest Mozilla Build</a>
 		</td>
 		<td><a href="aptus://netweb_google-chrome-stable" class="button1"><img src="images/google-chrome.svg" class="appicon"><br />Google Chrome</a>
@@ -78,10 +80,10 @@ Last update: May 5, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netweb_iron" class="button1"><img src="images0/iron.png" class="appicon"><br />Iron</a>
 		</td>
-		<td><a href="aptus://netweb_konqueror" class="button1"><img src="images/konqueror.svg" class="appicon"><br />Konqueror</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_konqueror" class="button1"><img src="images/konqueror.svg" class="appicon"><br />Konqueror</a>
+		</td>
 		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
 		</td>
 		<td><a href="aptus://netweb_luakit" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Luakit</a>
@@ -92,10 +94,10 @@ Last update: May 5, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netweb_midori" class="button1"><img src="images0/midori.svg" class="appicon"><br />Midori</a>
 		</td>
-		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
+		</td>
 		<td><a href="aptus://netweb_netrik" class="button1"><img src="images/terminal.svg" class="appicon"><br />Netrik</a>
 		</td>
 		<td><a href="aptus://netweb_netsurf-gtk" class="button1"><img src="images0/netsurf.png" class="appicon"><br />NetSurf GTK</a>
@@ -106,10 +108,10 @@ Last update: May 5, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netweb_otter-browser" class="button1"><img src="images0/otter.png" class="appicon"><br />Otter</a>
 		</td>
-		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
+		</td>
 		<td><a href="aptus://netweb_qutebrowser" class="button1"><img src="images0/qutebrowser.png" class="appicon"><br />qutebrowser</a>
 		</td>
 		<td><a href="aptus://netweb_seamonkey" class="button1"><img src="images0/seamonkey.png" class="appicon"><br />SeaMonkey</a>
@@ -120,10 +122,10 @@ Last update: May 5, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netweb_ungoogled-chromium" class="button1"><img src="images/chromium.svg" class="appicon"><br />Ungoogled Chromium</a>
 		</td>
-		<td><a href="aptus://netweb_viper-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Viper Browser</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_viper-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Viper Browser</a>
+		</td>
 		<td><a href="aptus://netweb_vivaldi-stable" class="button1"><img src="images/vivaldi.svg" class="appicon"><br />Vivaldi</a>
 		</td>
 		<td><a href="aptus://netweb_w3m" class="button1"><img src="images/terminal.svg" class="appicon"><br />w3m</a>
