--- a/7/lib/sparky-aptus-appcenter/accessories-usb.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-usb.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: November 12, 2022 by pavroo
 -->
 	<head>
 		<title>Accessories -> USB Management | APTus AppCenter</title>
@@ -40,7 +40,7 @@ Last update: June 13, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://accusb_balena-etcher-electron" class="button1"><img src="images/usb-creator.svg" class="appicon"><br />balena Etcher</a>
+		<td><a href="aptus://accusb_balena-etcher" class="button1"><img src="images/usb-creator.svg" class="appicon"><br />balena Etcher</a>
 		</td>
 		<td><a href="aptus://accusb_live-clone" class="button1"><img src="images/usb-creator.svg" class="appicon"><br />Live Clone</a>
 		</td>
