--- a/7/lib/sparky-aptus-appcenter/games-puzzle.html
+++ b/7/lib/sparky-aptus-appcenter/games-puzzle.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 6, 2022 by pavroo
+Last update: November 12, 2022 by pavroo
 -->
 	<head>
 		<title>Games -> Puzzle | APTus AppCenter</title>
@@ -76,12 +76,14 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_fillets-ng" class="button1"><img src="images/tetris.svg" class="appicon"><br />Fish Fillets</a>
 		</td>
-		<td><a href="aptus://gampuz_four-in-a-row" class="button1"><img src="images/gnect.svg" class="appicon"><br />Four in a Row</a>
+		<td><a href="aptus://gampuz_flobopuyo" class="button1"><img src="images/tetris.svg" class="appicon"><br />FloboPuyo</a>
 		</td>
-		<td><a href="aptus://gampuz_freealchemist" class="button1"><img src="images/tetris.svg" class="appicon"><br />Free Alchemist</a>
+		<td><a href="aptus://gampuz_four-in-a-row" class="button1"><img src="images/gnect.svg" class="appicon"><br />Four in a Row</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gampuz_freealchemist" class="button1"><img src="images/tetris.svg" class="appicon"><br />Free Alchemist</a>
+		</td>
 		<td><a href="aptus://gampuz_frozen-bubble" class="button1"><img src="images1/frozen-bubble.svg" class="appicon"><br />Frozen Bubble</a>
 		</td>
 		<td><a href="aptus://gampuz_galois" class="button1"><img src="images/tetris.svg" class="appicon"><br />Galois</a>
@@ -92,10 +94,10 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_gmult" class="button1"><img src="images/2048.svg" class="appicon"><br />Gmult</a>
 		</td>
-		<td><a href="aptus://gampuz_gnome-2048" class="button1"><img src="images/2048.svg" class="appicon"><br />GNOME 2048</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gampuz_gnome-2048" class="button1"><img src="images/2048.svg" class="appicon"><br />GNOME 2048</a>
+		</td>
 		<td><a href="aptus://gampuz_gnome-klotski" class="button1"><img src="images/gnome-klotski.svg" class="appicon"><br />GNOME Klotski</a>
 		</td>
 		<td><a href="aptus://gampuz_gnome-mines" class="button1"><img src="images/gnome-mines.svg" class="appicon"><br />GNOME Mines</a>
@@ -103,8 +105,6 @@ Last update: March 6, 2022 by pavroo
 		<td><a href="aptus://gampuz_gnome-taquin" class="button1"><img src="images/gnome-taquin.svg" class="appicon"><br />GNOME Taquin</a>
 		</td>
 		<td><a href="aptus://gampuz_gnome-tetravex" class="button1"><img src="images/gnome-tetravex.svg" class="appicon"><br />GNOME Tetravex</a>
-		</td>
-		<td><a href="aptus://gampuz_gnubik" class="button1"><img src="images/container.svg" class="appicon"><br />GNUbik</a>
 		</td>
 		<td><a href="aptus://gampuz_gnurobbo" class="button1"><img src="images/tetris.svg" class="appicon"><br />GNU Robbo</a>
 		</td>
@@ -214,16 +214,14 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_xdemineur" class="button1"><img src="images/gnome-mines.svg" class="appicon"><br />Xdemineur</a>
 		</td>
-		<td><a href="aptus://gampuz_xjig" class="button1"><img src="images/tetris.svg" class="appicon"><br />Xjig</a>
-		</td>
 		<td><a href="aptus://gampuz_xsok" class="button1"><img src="images/tetris.svg" class="appicon"><br />Xsok</a>
 		</td>
 		<td><a href="aptus://gampuz_xwelltris" class="button1"><img src="images/tetris.svg" class="appicon"><br />Xwelltris</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampuz_xye" class="button1"><img src="images/tetris.svg" class="appicon"><br />Xye</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampuz_zaz" class="button1"><img src="images1/zaz.svg" class="appicon"><br />Zaz</a>
 		</td>
 	</tr>
