--- a/7/lib/sparky-aptus-appcenter/office-text.html
+++ b/7/lib/sparky-aptus-appcenter/office-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 12, 2022 by pavroo
+Last update: November 12, 2022 by pavroo
 -->
 	<head>
 		<title>Office -> Text Editors | APTus AppCenter</title>
@@ -106,30 +106,38 @@ Last update: October 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://offtex_nano" class="button1"><img src="images1/nano.svg" class="appicon"><br />Nano</a>
 		</td>
-		<td><a href="aptus://offtex_notepadnext" class="button1"><img src="images/text-editor.svg" class="appicon"><br />NotepadNext</a>
+		<td><a href="aptus://offtex_ne" class="button1"><img src="images/terminal.svg" class="appicon"><br />ne</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_nedit" class="button1"><img src="images/terminal.svg" class="appicon"><br />NEdit</a>
+		</td>
+		<td><a href="aptus://offtex_notepadnext" class="button1"><img src="images/text-editor.svg" class="appicon"><br />NotepadNext</a>
+		</td>
 		<td><a href="aptus://offtex_notepadqq" class="button1"><img src="images1/notepadqq.svg" class="appicon"><br />NotepadQQ</a>
+		</td>
+		<td><a href="aptus://offtex_nvi" class="button1"><img src="images/terminal.svg" class="appicon"><br />Nvi</a>
 		</td>
 		<td><a href="aptus://offtex_pluma" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Pluma</a>
 		</td>
 		<td><a href="aptus://offtex_scite" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Scite</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offtex_sed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Sed</a>
 		</td>
 		<td><a href="aptus://offtex_tea" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tea</a>
 		</td>
 		<td><a href="aptus://offtex_vim" class="button1"><img src="images/vim.svg" class="appicon"><br />Vim</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://offtex_vis" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Vis</a>
 		</td>
 		<td><a href="aptus://offtex_wordgrinder-x11" class="button1"><img src="images/text-editor.svg" class="appicon"><br />WordGrinder x11</a>
 		</td>
 		<td><a href="aptus://offtex_xjed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Xjed</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offtex_zim" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zim</a>
 		</td>
 	</tr>
