--- a/7/lib/sparky-aptus-appcenter/system-filesystems.html
+++ b/7/lib/sparky-aptus-appcenter/system-filesystems.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 20, 2021 by pavroo
+Last update: November 12, 2022 by pavroo
 -->
 	<head>
 		<title>System -> File Systems | APTus AppCenter</title>
@@ -87,6 +87,8 @@ Last update: August 20, 2021 by pavroo
 		<td><a href="aptus://sysfil_vmfs-tools" class="button1"><img src="images/default-icon.svg" class="appicon"><br />VMFS tools</a>
 		</td>
 		<td><a href="aptus://sysfil_xfsprogs" class="button1"><img src="images/default-icon.svg" class="appicon"><br />XFSprogs</a>
+		</td>
+		<td><a href="aptus://sysfil_zfsutils-linux" class="button1"><img src="images/default-icon.svg" class="appicon"><br />ZFSutils Linux</a>
 		</td>
 	</tr>
 </tbody>
